# cheat-rs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  search.rs  sheet.rs
