[package]
name = "cheat"
version = "0.4.1"
authors = ["zombie110year <zombie110year@outlook.com>"]
edition = "2018"
description = "manage cheat sheets"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
clap = "2.33.0"
chrono = "0.4.7"
fuzzy-matcher = "0.2.1"
